0.10.7 (26.07.2020)
================
* fix compatibility with SPSS in 'w_mean' function (issue #72)

0.10.6 (26.07.2020)
================
* fix for new data.table version (issue #67). Thanks to John Williams.
* fix dplyr behaviour (issues #65, #68)

0.10.5 (05.07.2020)
================
* add argument 'default' for 'var_lab' function (issue #60). Thanks to Dan Chaltiel 
* fixes for new versions of R, htmlTable, huxtable

0.10.3 (30.03.2020)
================
* very minor fix: revert back default method for 'set_caption'

0.10.2 (25.03.2020)
================
* fixes for R4.0
* new vignette with examples
* add functions 'hide' and 'unhide' for selective hiding and showing categories in 'net' and 'subtotal'
* now logical don't have special meaning in the 'recode'. If you use this functionality than use 'when' instead. 
    recode(y, x>5 ~ 1) need to be replaced with recode(y, when(x>5) ~ 1).
* add 'xl_write_file' for quick export tables to Excel file
* Add 'tab_caption' - alias for 'set_caption'

0.10.1 (28.11.2019)
================
* output to PDF, Word via huxtable package (thanks to Sebastian Jeworutzki). See 'as_hux' and 'expss_output_huxtable'.   
* bugfixes

0.9.1 (26.08.2019)
================
* fix vignette for new 'reformulate' 
* fix recode for list recodings. Now c(1, 5 %thru% 99) ~ 999 works properly.
* 'subtotal' and 'net' produce consistent ordering of subototal items (thanks Roberto Gilsaura for extensive testing)
* 'subtotal' and 'net' allow overlapping categories

0.9.0 (01.07.2019)
================
* add 'subtotal' and 'net' functions. See '?net'.
* 'recode' now can recode value labels to keep them consistent with values (see argument 'with_labels')
* add alias 'rec' to recode with argument 'with_labels = TRUE' by default
* now you can assign new labels in 'recode' ("TOP" = 4:5 ~ 5)
* improve 'recode' performance